--- a/ByteMarket/backend/src/main/resources/templates/reviews.html
+++ b/ByteMarket/backend/src/main/resources/templates/reviews.html
@@ -41,6 +41,6 @@
     <h2 class="fw-bolder mb-2">Reseñas</h2>
 </div>
 <div class="text-center">
-    <h3 class="py-4 mb-4 defaultText">Todavía no hay reseñas en esta sección</h3>
+    <h3 class="py-4 mb-4 defaultText">No ha recibido reseñas aún</h3>
 </div>
 {{/reviews}}
