--- a/ByteMarket/backend/src/main/resources/static/css/profileStyle.css
+++ b/ByteMarket/backend/src/main/resources/static/css/profileStyle.css
@@ -35,3 +35,8 @@
     margin-top: 30px;
     color: rgb(150, 150, 150);
 }
+.productCard .card-img-top {
+    object-fit: cover;
+    width: 100%;
+    height: 200px;
+}
