--- a/ByteMarket/backend/src/main/resources/templates/productDetail_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/productDetail_template.html
@@ -109,6 +109,7 @@
 
             <div>
                 <h5 class="mb-0">{{product.owner.name}}</h5>
+                {{^deletedUser}}
                 <div>
                     <inf>Ventas: {{salesNumber}}<br></inf>
                     <inf>Compras: {{purchasesNumber}}<br></inf>
@@ -116,12 +117,14 @@
                         {{rating}}/5 <i class="bi bi-star-fill"></i> - {{reviewsNumber}} reseñas
                     </span>
                 </div>
+                {{/deletedUser}}
             </div>
         </div>
         <hr>
     </div>
 
     <!--Reports-->
+    {{^deletedUser}}
     {{#logged}}
     {{^admin}}
     {{^isOwner}}
@@ -240,7 +243,7 @@
         <hr>
     </div>
     {{/reviewsSection}}
-
+    {{/deletedUser}}
     <!--Location-->
     {{#location}}
     <div class="container mt-4">
