--- a/ByteMarket/backend/src/main/resources/templates/productDetail_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/productDetail_template.html
@@ -44,7 +44,7 @@
                         {{#isOwner}}
                         <form action="/editProduct/{{product.id}}" method="get">
                             <button type="submit" class="btn btn-custom w-100">
-                                <i class="bi bi-heart-fill m-2" style="color: white;"></i>Editar Producto
+                                <i class="bi bi-pencil-fill m-2" style="color: white;"></i>Editar Producto
                             </button>
                             <input type="hidden" name="_csrf" value="{{token}}" />
                         </form>
