--- a/ByteMarket/backend/src/main/resources/static/css/editProfile.css
+++ b/ByteMarket/backend/src/main/resources/static/css/editProfile.css
@@ -66,3 +66,14 @@
     width: 100%;
     margin-bottom: 10px;
 }
+
+@media (max-width: 900px) {
+    .profile-container {
+        width: 90%;
+        padding: 20px;
+        background: white;
+        border-radius: 10px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        position: relative;
+    }
+}
