--- a/ByteMarket/backend/src/main/resources/templates/editProfile.html
+++ b/ByteMarket/backend/src/main/resources/templates/editProfile.html
@@ -19,6 +19,10 @@
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <title>ByteMarket</title>
 </head>
+
+<body>
+    
+
 {{>header}}
 
 <div class="container py-5">
@@ -89,8 +93,7 @@
 </script>
 <script src="/js/selectMap.js"></script>
 
-{{>footer}}
-
+{{>footer}}S
 </body>
 
 </html>
