--- a/ByteMarket/backend/src/main/resources/templates/home_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/home_template.html
@@ -25,31 +25,32 @@
 <body>
 
     {{#top_seller_products.0}} <!-- Verify if there is at least one product -->
-    <section class="py-4">
-        <div class="container">
-            <h2 class="fw-bolder mb-3">Productos destacados</h2>
-            <div class="carousel-container">
-                <div class="carousel-scroll" id="product-carousel">
-                    {{#top_seller_products}}
-                    <div class="product-item">
-                        <a href="/product/{{id}}" style="text-decoration: none;">
-                            <div class="productCard card h-100">
-                                {{#thumbnail}}
-                                <img class="card-img-top" src="/product/image/{{id}}" alt="{{name}}" />
-                                {{/thumbnail}}
-                                {{^thumbnail}}
-                                <img class="card-img-top"
-                                    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADh..." alt="{{name}}" />
-                                {{/thumbnail}}
-                                <div class="card-body p-4 text-center">
-                                    <h5 class="fw-bolder">{{name}}</h5>
-                                    <p>{{price}}€</p>
-                                </div>
+    <section class="py-2 bg-dark">
+        <div class="container topProdContainer">
+            <div class="text-white">
+                <h2 class="fw-bolder">Productos Destacados</h2>
+            </div>
+            <div class="topProducts gx-4 gx-lg-5">
+                {{#top_seller_products}}
+                <div class="product-item">
+                    <a href="/product/{{id}}" style="text-decoration: none;">
+                        <div class="productCard card h-100">
+                            {{#thumbnail}}
+                            <img class="card-img-top" src="/product/image/{{id}}" alt="{{name}}" />
+                            {{/thumbnail}}
+                            {{^thumbnail}}
+                            <img class="card-img-top"
+                                src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADh..." alt="{{name}}" />
+                            {{/thumbnail}}
+                            <div class="card-body p-4 text-center">
+                                <h5 class="fw-bolder">{{name}}</h5>
+                                <p>{{price}}€</p>
                             </div>
-                        </a>
-                    </div>
-                    {{/top_seller_products}}
+                        </div>
+                    </a>
                 </div>
+                {{/top_seller_products}}
+                
             </div>
         </div>
     </section>
@@ -90,9 +91,9 @@
         </div>
 
         <div class="d-flex justify-content-center">
-            <button class="btn btn-custom headerButton" id="load-more" type="button" data-current-page="{{currentPage}}"
+            <button class="btn btn-custom" id="load-more" type="button" data-current-page="{{currentPage}}"
                 data-total-pages="{{totalPages}}">
-                <span class="fav-sellText">Cargar más</span>
+                <span>Cargar más</span>
                 <span id="spinner" class="spinner-border spinner-border-sm text-light ms-2" role="status"
                     style="display: none;"></span>
             </button>
