--- a/ByteMarket/backend/src/main/resources/templates/newProduct.html
+++ b/ByteMarket/backend/src/main/resources/templates/newProduct.html
@@ -63,7 +63,7 @@
                     </button>
                 </div>
                 <div class="col-md-6">
-                    <a href="/product/{{id}}" class="w-100">
+                    <a href="{{#edit}}/product/{{product.id}}{{/edit}}{{^edit}}/{{/edit}}" class="w-100">
                         <button type="button" class="btn btn-outline-dark btn-custom w-100">
                             <i class="bi bi-x-circle"></i> Cancelar
                         </button>
