--- a/ByteMarket/backend/src/main/resources/templates/productByCategory.html
+++ b/ByteMarket/backend/src/main/resources/templates/productByCategory.html
@@ -57,9 +57,9 @@
         </div> 
                 
         <div class="d-flex justify-content-center">
-            <button class="btn btn-custom headerButton" id="load-more" type="button"
+            <button class="btn btn-custom" id="load-more" type="button"
                 data-current-page="{{currentPage}}" data-total-pages="{{totalPages}}">
-                <span class="fav-sellText">Cargar más</span>
+                <span>Cargar más</span>
                 <span id="spinner" class="spinner-border spinner-border-sm text-light ms-2" role="status" style="display: none;"></span>
             </button>
         </div>        
