separation of the scripts from the template

--- a/ByteMarket/backend/src/main/resources/templates/productDetail_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/productDetail_template.html
@@ -161,12 +161,6 @@
             </div>
             <hr>
         </div>
-
-        <script>
-            document.getElementById("btn-report-issue").addEventListener("click", function () {
-                document.getElementById("report-form-container").classList.toggle("d-none");
-            });
-        </script>
     </div>
     {{/hasBoughtProduct}}
 
@@ -209,11 +203,6 @@
     {{/isOwner}}
     {{/admin}}
     {{/logged}}
-    <script>
-        document.getElementById("btn-add-review").addEventListener("click", function () {
-            document.getElementById("review-form-container").classList.toggle("d-none");
-        });
-    </script>
 
     <!--Review-->
     {{#reviewsSection}}
@@ -259,7 +248,7 @@
     {{/location}}
     <br>
     <br>
-
+    <script src="/js/productDetail.js"></script>
     {{>footer}}
 </body>
 
