--- a/ByteMarket/backend/src/main/resources/templates/signin_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/signin_template.html
@@ -48,7 +48,7 @@
             <div id="errorPassword" class="ocult"></div>
             <div class="mb-3">
                 <label for="registerPassword" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="password" name="encodedPassword">
+                <input type="password" class="form-control" id="password" name="encodedPassword" title="Contraseña" placeholder="Ingrese su contraseña">
             </div>
             <div class="mb-3">
                 <label for="confirmPassword" class="form-label">Confirmar Contraseña</label>
