--- a/ByteMarket/backend/src/main/resources/templates/editProfile.html
+++ b/ByteMarket/backend/src/main/resources/templates/editProfile.html
@@ -82,15 +82,7 @@
     </div>
 </div>
 
-<script>
-    document.getElementById('profilePicInput').addEventListener('change', function (event) {
-        const [file] = event.target.files;
-        if (file) {
-            const profilePicPreview = document.getElementById('pfp-preview');
-            profilePicPreview.src = URL.createObjectURL(file);
-        }
-    });
-</script>
+<script src="/js/profilePic.js"></script>
 <script src="/js/selectMap.js"></script>
 
 {{>footer}}
