--- a/ByteMarket/backend/src/main/resources/templates/newProduct.html
+++ b/ByteMarket/backend/src/main/resources/templates/newProduct.html
@@ -9,10 +9,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="/js/newProduct.js"></script>
     <link rel="stylesheet" href="/css/homeStyle.css">
     <link rel="stylesheet" href="/css/headerStyle.css">
     <link rel="stylesheet" href="/css/formStyle.css">
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <title>ByteMarket</title>
 </head>
 {{>header}}
@@ -36,7 +37,7 @@
                 </div>
                 <div class="col-md-6">
                     <label for="category" class="form-label">Categoría</label>
-                    <select class="form-select" id="category" name="category" required>
+                    <select class="form-select" id="category" name="category" required data-category="{{#edit}}{{product.category}}{{/edit}}">
                         <option value="">Seleccione una categoría</option>
                         <option value="Móviles">Móviles</option>
                         <option value="Ordenadores">Ordenadores</option>
@@ -79,15 +80,15 @@
                     {{#oneImage}}
                         {{#images}}
                             <div class="m-2 position-relative">
-                                <img src="/product/image/{{id}}" style="height: 300px;">
+                                <img src="/product/image/{{id}}" class="product-image" alt="Product Image">
                             </div>
                         {{/images}}
                     {{/oneImage}}
                     {{^oneImage}}
                         {{#images}}
                         <form action="/delete/image/{{id}}" class="m-2 position-relative imgForm" method="POST">
-                            <img src="/product/image/{{id}}" class="prodImg">
-                            <button type="submit" class="deleteImg"> <i class="bi bi-x-circle-fill"></i> </button>
+                            <img src="/product/image/{{id}}" class="prodImg" alt="Product Image">
+                            <button type="submit" class="deleteImg" title="Eliminar imagen"> <i class="bi bi-x-circle-fill"></i> </button>
                             <input type="hidden" name="_csrf" value="{{token}}"/>
                             <input type="text" name="productId" value="{{product.id}}" hidden>
                         </form>
@@ -120,22 +121,6 @@
              redirija al formulario de edicion -->
         
     </div>
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            const categorySelect = document.getElementById("category");
-            const selectedCategory = "{{#edit}}{{product.category}}{{/edit}}";
-    
-            if (selectedCategory) {
-                for (let option of categorySelect.options) {
-                    if (option.value === selectedCategory) {
-                        option.selected = true;
-                        break;
-                    }
-                }
-            }
-        });
-    </script>
-    
     {{>footer}}
     </body>
     </html>
