--- a/ByteMarket/backend/src/main/resources/static/css/formStyle.css
+++ b/ByteMarket/backend/src/main/resources/static/css/formStyle.css
@@ -61,7 +61,7 @@ body {
 .error{
     margin-top: 5px;
     margin-bottom: 5px;
-    color:#fff;
+    color:#000000;
     font-size: 0.7rem;
     text-align: center;
     background-color: #ffffff;
