Load More of profile page products and section of favorites

--- a/ByteMarket/backend/src/main/resources/templates/favorite.html
+++ b/ByteMarket/backend/src/main/resources/templates/favorite.html
@@ -28,6 +28,7 @@
             <div class="">
                 <h2 class="fw-bolder mb-3">{{favorite_products_title}}</h2>
             </div>
+            <div id="products-list">
             <div class="row otherProducts">
                 {{#favoriteProducts}}
                 <div class="otherProduct col-3">
@@ -45,6 +46,7 @@
                 </div>
                 {{/favoriteProducts}}
             </div>
+        </div>
         </div>
 
     </section>
