--- a/ByteMarket/backend/src/main/resources/templates/showProducts_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/showProducts_template.html
@@ -3,6 +3,7 @@
         <div class="">
             <h2 class="fw-bolder mb-3">{{title}}</h2>
         </div>
+        <div id="products-list">
         <div class="row otherProducts">
             {{#show_products}}
             <div class="otherProduct col-3">
@@ -30,5 +31,6 @@
                 </div>
             {{/show_products}}
         </div>
+    </div>
     </div>
 </section>
