--- a/ByteMarket/backend/src/main/resources/templates/profile_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/profile_template.html
@@ -13,6 +13,8 @@
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="/js/chartRendering.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/js/loadMoreProfile.js"></script>
     <link rel="stylesheet" href="/css/profileStyle.css">
     <link rel="stylesheet" href="/css/editProfile.css">
     <link rel="stylesheet" href="/css/headerStyle.css">
@@ -122,12 +124,19 @@
     
     {{^reviewsSection}}
     {{>showProducts_template}}
+    <input type="hidden" id="userId" value="{{#user}}{{user.id}}{{/user}}{{^user}}""{{/user}}"> 
+    <div class="d-flex justify-content-center mb-5">
+        <button class="btn btn-custom mt-0" id="load-more" type="button" data-current-page="{{currentPage}}"
+            data-total-pages="{{totalPages}}" data-filter="{{filter}}">
+            <span>Cargar más</span>
+            <span id="spinner" class="spinner-border spinner-border-sm text-light ms-2" role="status"
+                style="display: none;"></span>
+        </button>
+    </div>
     {{/reviewsSection}}
     
     
 
+    </body>
     {{>footer}}
-
-</body>
-
 </html>
