minor style fixes

--- a/ByteMarket/backend/src/main/resources/templates/newProduct.html
+++ b/ByteMarket/backend/src/main/resources/templates/newProduct.html
@@ -80,7 +80,7 @@
                     {{#oneImage}}
                         {{#images}}
                             <div class="m-2 position-relative">
-                                <img src="/product/image/{{id}}" class="product-image" alt="Product Image">
+                                <img src="/product/image/{{id}}" class="prodImg" alt="Product Image">
                             </div>
                         {{/images}}
                     {{/oneImage}}
