--- a/ByteMarket/backend/src/main/resources/templates/reports.html
+++ b/ByteMarket/backend/src/main/resources/templates/reports.html
@@ -31,7 +31,7 @@
                         <div>
                             <h5 class="mb-1">{{reason}}</h5>
                             <p class="mb-1">{{description}}</p>
-                            <small class="text-muted">Reportado: {{user.name}}</small>
+                            <small class="text-muted">Reportado por: {{user.name}}</small>
                         </div>
                         <div>
                             <form action="/solve-report/{{id}}" method="POST">
