Added more example data and fixed load more functionality

--- a/ByteMarket/backend/src/main/resources/templates/profile_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/profile_template.html
@@ -124,7 +124,7 @@
     
     {{^reviewsSection}}
     {{>showProducts_template}}
-    <input type="hidden" id="userId" value="{{#user}}{{user.id}}{{/user}}{{^user}}""{{/user}}"> 
+    <input type="hidden" id="userId" value="{{#user}}{{user.id}}{{/user}}"> 
     <div class="d-flex justify-content-center mb-5">
         <button class="btn btn-custom mt-0" id="load-more" type="button" data-current-page="{{currentPage}}"
             data-total-pages="{{totalPages}}" data-filter="{{filter}}">
