minor changes and moving the web layout files

--- a/ByteMarket/backend/src/main/resources/templates/profile_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/profile_template.html
@@ -110,7 +110,7 @@
         <div class="profile-container">
             <div>
                 <h5 class="fw-bolder">Estadísticas:</h5>
-                <canvas id="graficoTransacciones" width="400" height="200"></canvas>
+                <canvas id="transactionChart" width="400" height="200"></canvas>
             </div>
         </div>
     </div>
