--- a/ByteMarket/backend/src/main/resources/static/css/productDetailsStyle.css
+++ b/ByteMarket/backend/src/main/resources/static/css/productDetailsStyle.css
@@ -1,6 +1,7 @@
 .img-fluid {
     max-height: 500px;
     object-fit: cover;
+    margin: auto;
 }
 
 .user-img {
@@ -20,7 +21,6 @@
     overflow-x: auto;
     gap: 10px;
     padding: 10px 0;
-    justify-content: center;
 }
 
 /* Customize the scrollbar */
