fixed product thumbnails

--- a/ByteMarket/backend/src/main/resources/templates/productByCategory.html
+++ b/ByteMarket/backend/src/main/resources/templates/productByCategory.html
@@ -36,7 +36,7 @@
                     <a href="/product/{{id}}" style="text-decoration: none;">
                         <div class="productCard card h-100">
                             {{#thumbnail}}
-                            <img class="card-img-top" src="/product/image/{{id}}" alt="{{name}}" />
+                            <img class="card-img-top" src="{{thumbnail}}" alt="{{name}}" />
                             {{/thumbnail}}
                             {{^thumbnail}} 
                             <img class="card-img-top"
