--- a/ByteMarket/backend/src/main/resources/templates/error.html
+++ b/ByteMarket/backend/src/main/resources/templates/error.html
@@ -22,7 +22,7 @@
 <body>
 <div class="container mt-4 mb-5">
     <div class="alert alert-danger" role="alert">
-        <strong>Error:</strong> {{message}}
+        <strong>Error:</strong> {{#message}}{{message}}{{/message}}
     </div>
     <button class="btn btn-outline-dark btn-custom" type="submit">
         <a href="/" style="text-decoration: none; color: white;">Volver a inicio</a>
