--- a/ByteMarket/backend/src/main/resources/templates/signin_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/signin_template.html
@@ -48,11 +48,11 @@
             <div id="errorPassword" class="ocult"></div>
             <div class="mb-3">
                 <label for="registerPassword" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="password" name="encodedPassword" title="Contraseña" placeholder="Ingrese su contraseña">
+                <input type="password" class="form-control" id="password" name="password" title="Contraseña" placeholder="Ingrese su contraseña">
             </div>
             <div class="mb-3">
                 <label for="confirmPassword" class="form-label">Confirmar Contraseña</label>
-                <input type="password" class="form-control" id="confirmPassword" name="confirmPassword"/>
+                <input type="password" class="form-control" id="confirmPassword" name="repeatPassword"/>
             </div>
             <!-- Hidden section to assign rol as default -->
             <input type="hidden" name="roles" value="USER">
