--- a/ByteMarket/backend/src/main/resources/templates/chat_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/chat_template.html
@@ -103,7 +103,7 @@
                         <div class="p-3 rounded shadow-sm d-flex align-items-center w-100 bg-white">
                             <a href="../profile/{{sender.id}}" class="d-flex align-items-center text-decoration-none">
                                 {{#sender.hasImage}}
-                                <img class="profile-pic mb-3 rounded-circle" src="/user/image/{{sender.id}}"
+                                <img class="profile-pic mb-3 rounded-circle" src="/user/{{sender.id}}/image"
                                     id="pfp-preview" alt="pfp" width="60" height="60">
                                 {{/sender.hasImage}}
                                 {{^sender.hasImage}}
